@@ -6,6 +6,8 @@
 - Scripts can be used as instance source in instance discovery DCIs
 - NXSL node object attribute snmpSysDescription renamed back to sysDescription
 - Selectors in NXSL
+- Array attributes in NXSL: size, minIndex, maxIndex
+- Hash map attributes in NXSL: size
 - Subnet mask for synthetic subnets can be set in server configuration
 - Added cumulative counters for server DB writer requests
 - Fixed data corruption issues in ODBC and Oracle DB drivers
